--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tic Tac Toe</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -13,7 +14,27 @@
 	<header>
 		<h1>Tic Tac Toe</h1>
 	</header>
-	
-	<div id="square"></div>
+	<main>
+		<div id="gameBoard">
+			<div id="row-1" class="cf">
+				<div id="col-1" class="square"></div>
+				<div id="col-2" class="square"></div>
+				<div id="col-3" class="square"></div>
+			</div>
+			<div id="row-2" class="cf">
+				<div id="col-1" class="square"></div>
+				<div id="col-2" class="square"></div>
+				<div id="col-3" class="square"></div>
+			</div>
+			<div id="row-3" class="cf">
+				<div id="col-1" class="square"></div>
+				<div id="col-2" class="square"></div>
+				<div id="col-3" class="square"></div>
+			</div>
+		</div>
+		<div class="reset">
+			<p>New Game</p>	
+		</div>
+	</main>
 </body>
 </html>
