--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<section class="play1">
 				<label for="p1">Rebels:</label>
 				<input type="text" name="p1" id="p1" placeholder=" Enter your name">
-				<p class="button signUp1">Sign up</p>
+				<p class="button signUp1">Report for duty</p>
 				<p class="score" id="score1">0</p>	
 				<img src="images/rebels.svg" alt="Rebel Alliance logo" id="rebelLogo">
 			</section>
@@ -47,7 +47,7 @@
 			<section class="play2">
 				<label for="p2">Empire:</label>
 				<input type="text" name="p2" id="p2" placeholder=" Enter your name">
-				<p class="button signUp2">Sign up</p>	
+				<p class="button signUp2">Report for duty</p>	
 				<p class="score" id="score2">0</p>	
 				<img src="images/empire.svg" alt="Galactic Empire logo" id="empireLogo">
 			</section>
