--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<input type="text" name="p1" id="p1" placeholder=" Enter your name">
 				<p class="button signUp1">Report for duty</p>
 				<p class="score" id="score1">0</p>	
-				<img src="images/rebels.svg" alt="Rebel Alliance logo" id="rebelLogo">
+				<img src="images/rebels.svg" alt="Rebel Alliance logo" class="rebelLogo">
 			</section>
 
 			<section id="gameBoard">
@@ -48,7 +48,7 @@
 				<input type="text" name="p2" id="p2" placeholder=" Enter your name">
 				<p class="button signUp2">Report for duty</p>	
 				<p class="score" id="score2">0</p>	
-				<img src="images/empire.svg" alt="Galactic Empire logo" id="empireLogo">
+				<img src="images/empire.svg" alt="Galactic Empire logo" class="empireLogo">
 			</section>
 		</section> 
 
